.metadata/.plugins/org.eclipse.cdt.ui/STM32_LED_PROJECT_BASIC.build.log
16:07:07 **** Incremental Build of configuration Debug for project STM32_LED_PROJECT_BASIC ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:279,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Core/Src/main.c: In function 'main':
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h:95:36: error: expected declaration specifiers or '...' before '(' token
   95 | #define GPIO_PIN_9                 ((uint16_t)0x0200)  /* Pin 9 selected    */
      |                                    ^
../Core/Inc/main.h:68:26: note: in expansion of macro 'GPIO_PIN_9'
   68 | #define LED2_CONTROL_Pin GPIO_PIN_9
      |                          ^~~~~~~~~~
../Core/Src/main.c:89:26: note: in expansion of macro 'LED2_CONTROL_Pin'
   89 |   void HAL_GPIO_WritePin(LED2_CONTROL_Pin, GPIO_PIN_9, GPIO_PIN_SET);
      |                          ^~~~~~~~~~~~~~~~
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h:95:36: error: expected declaration specifiers or '...' before '(' token
   95 | #define GPIO_PIN_9                 ((uint16_t)0x0200)  /* Pin 9 selected    */
      |                                    ^
../Core/Src/main.c:89:44: note: in expansion of macro 'GPIO_PIN_9'
   89 |   void HAL_GPIO_WritePin(LED2_CONTROL_Pin, GPIO_PIN_9, GPIO_PIN_SET);
      |                                            ^~~~~~~~~~
../Core/Src/main.c:89:56: error: expected declaration specifiers or '...' before 'GPIO_PIN_SET'
   89 |   void HAL_GPIO_WritePin(LED2_CONTROL_Pin, GPIO_PIN_9, GPIO_PIN_SET);
      |                                                        ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.

16:07:07 Build Failed. 5 errors, 0 warnings. (took 341ms)

